# SecondBrain

./: .gitignore  .vercelignore  DEPLOYMENT.md  README.md  build.js  vercel.json
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.sb  .gitignore  Dockerfile  config.py  embeddings_cache.db  evaluate_rag.py  pyproject.toml  ragas_report.md  requirements.txt
backend/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
backend/api/: main.py
backend/core/: chunker.py  embedder.py  generator.py  llm_client.py  local_embedder.py  query_expander.py  reranker.py  retriever.py
backend/db/: chunks.py  client.py  documents.py  graph.py  models.py  vectorstore.py
backend/pipeline/: ingest.py  query.py
backend/tests/: test_chunker.py  test_db.py  test_embedder.py  test_extractor.py  test_llm_client.py  test_pipeline.py  test_retriever.py
backend/tests/documents/: notes.md  readme.txt
backend/utils/: pdf_extractor.py
frontend/: .env  .env.example  .gitignore  nitro.config.ts  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: styles.css
frontend/src/components/: AuthScreen.tsx
frontend/src/components/chat/: ChatPanel.tsx  ChatScreen.tsx  (+6 more)
frontend/src/context/: AppContext.tsx
frontend/src/lib/: api.ts  chunker.ts  gemini.ts  pdfExtract.ts  supabase.ts
frontend/src/routes/: __root.tsx  auth.tsx  chat.tsx
src/components/landing/: EngineeringChallenges.tsx  Features.tsx  Hero.tsx  HeroVisual.tsx  WhyBuilt.tsx
src/routes/: __root.tsx  index.tsx
(+7 files in other folders)
