[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepeval>=4.0.7",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.5",
    "numpy>=2.4.6",
    "pypdf>=6.13.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "rank-bm25>=0.2.2",
    "scipy>=1.17.1",
    "sentence-transformers>=5.5.1",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
